--- a/configs/wifi/WCNSS_qcom_cfg.ini
+++ b/configs/wifi/WCNSS_qcom_cfg.ini
@@ -238,7 +238,10 @@ gMaxMediumTime = 6000
 gRrmEnable=1
 
 #Enable Power Save offload
-gEnablePowerSaveOffload=1
+gEnablePowerSaveOffload=4
+
+#Enable Advanced Power Save
+gAdvancedPowerSaveMode=1
 
 #Enable firmware uart print
 gEnablefwprint=0
